refactor(editList) generalize createChildNode to create any node, child or root
